--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,40 @@
-ECHO is on.
-# Ignore build output and VS files
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# React
+build/
+dist/
+
+# C#
 bin/
 obj/
-.vs/
 *.user
 *.suo
-*.vspx
-*.vsidx
+*.cache
+*.log
+*.vs/
+*.dbmdl
+*.pdb
+
+# SQL Server local DB files
+*.mdf
+*.ldf
+
+# Mac / Windows system files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Environment files
+.env
+.env.*
+
+# Others
+.vscode/
+.idea/
